# rust-llm-webapp-generator

./: .gitignore  Cargo.toml  run.sh
assets/prompts/architect/: print_site_urls.prompt  project_scope.prompt
src/: main.rs
src/ai_functions/: aifunc_architect.rs  aifunc_backend.rs  aifunc_managing.rs
src/apis/: call_request.rs
src/helpers/: command_line.rs  general.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs
src/models/agents_manager/: managing_agent.rs
